--- a/src/pages/sharedPages/SharedContent.module.css
+++ b/src/pages/sharedPages/SharedContent.module.css
@@ -29,3 +29,23 @@
      text-transform: uppercase;
      padding-bottom: 2rem;
 }
+
+
+
+@media screen and (max-width:600px) {
+  .shared-heading{
+    padding-top: 4rem;
+    font-size: 1rem;
+     font-family: "Source Serif 4", serif;
+     text-transform: uppercase;
+     letter-spacing: 0.5rem;
+     padding-left: 2rem;
+     padding-right: 2rem;
+
+}
+.shared-children{
+    font-size: .7rem;
+    padding: 5rem;
+    text-transform: uppercase;
+}
+}
