--- a/src/pages/hompage/KeyPoint.module.css
+++ b/src/pages/hompage/KeyPoint.module.css
@@ -13,3 +13,40 @@
     justify-items: center;
     
 }
+@media screen and (max-width: 600px) {
+  .key-container{
+    margin-top: -50rem;
+    background-color: var( --PrimaryColor);
+    color: var(--SecondaryColor);
+   display: flex;
+   flex-direction: column;
+    padding-left: var(--bodyPadding);
+    padding-right: var(--bodyPadding);
+    align-self: center;
+    justify-items: center;
+    
+}
+.key-card{
+  padding: 2rem;
+}
+}
+
+@media screen and (min-width: 601px) and (max-width: 1000px) {
+  .key-container{
+    margin-top: -50rem;
+    background-color: var( --PrimaryColor);
+    color: var(--SecondaryColor);
+   display: flex;
+   flex-direction: column;
+    padding-left: var(--bodyPadding);
+    padding-right: var(--bodyPadding);
+    align-self: center;
+    justify-items: center;
+    
+}
+.key-card{
+  padding: 2rem;
+  width: 100%;
+ 
+}
+}
