--- a/src/pages/hompage/TestimonyComponent.module.css
+++ b/src/pages/hompage/TestimonyComponent.module.css
@@ -27,7 +27,7 @@
 
 .testimany-picture {
     margin-top: 2rem;
-  width: 100%;
+  width: 50%;
   height: 100%;
   grid-area: img;
   border-radius: 50%;
@@ -65,4 +65,58 @@
   text-align: center;
   justify-content: center;
    font-family: "Source Serif 4", serif;
+}
+
+
+@media screen and (max-width:600px) {
+
+.testimony-container {
+  display: grid;
+  grid-template-columns: 50% 10% 40%;
+  grid-template-rows: 1fr 6rem 1fr;
+  grid-template-areas:
+    "img img name"
+    "job job job"
+    "review review review";
+  width: 100%;
+  height: 20%;
+  background-color: var(--SecondaryColor);
+  transform: skew(0deg);
+  align-self: center;
+  justify-self: center;
+  padding: 0 1rem;
+  box-shadow:0 1px 0 var(--secondaryColorGray), 0 2px 0 var(--secondaryColorGray),
+    0 3px 0 var(--secondaryColorGray), 0 4px 0 var(--secondaryColorGray),
+    0 20px 5px var(--secondaryColorGray);
+   
+
+
+}
+
+  
+}
+@media screen and (min-width:601px) and (max-width:900px){
+  .testimony-container {
+  display: grid;
+  grid-template-columns: 50% 10% 40%;
+  grid-template-rows: 12rem 6rem 12rem;
+  grid-template-areas:
+    "img img name"
+    "job job job"
+    "review review review";
+  width: 100%;
+  height: 20%;
+  background-color: var(--SecondaryColor);
+  transform: skew(-2deg);
+  align-self: center;
+  justify-self: center;
+  padding: 0 1rem;
+  box-shadow:0 1px 0 var(--secondaryColorGray), 0 2px 0 var(--secondaryColorGray),
+    0 3px 0 var(--secondaryColorGray), 0 4px 0 var(--secondaryColorGray),
+    0 20px 5px var(--secondaryColorGray);
+   
+
+
+}
+
 }
