--- a/src/pages/hompage/header.module.css
+++ b/src/pages/hompage/header.module.css
@@ -13,6 +13,38 @@
   color: var(--SecondaryColor);
 }
 
+@media screen and (max-width: 600px) {
+  .header-Main-container {
+    display: flex;
+    flex-direction: column;
+    /* justify-content: space-between; */
+    align-items: center;
+    padding-left: 2rem;
+    padding-right: 2rem;
+
+    background-color: var(--PrimaryColor);
+    color: var(--SecondaryColor);
+  }
+}
+
+@media screen and (min-width: 601px) and (max-width: 900px) {
+  .header-Main-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-areas:
+      "main main"
+      "prof prof";
+    /* justify-content: space-between; */
+    align-items: center;
+    padding-left: 2rem;
+    padding-right: 2rem;
+
+    background-color: var(--PrimaryColor);
+    color: var(--SecondaryColor);
+  }
+}
+
 /* circle */
 
 .header-Main--floating-ball-outer {
@@ -21,7 +53,7 @@
   height: 4rem;
   background-color: var(--PrimaryColorYellow);
   border-radius: 50%;
- transform: translateX(10rem);
+  transform: translateX(10rem);
 
   box-shadow: 0 0 10px var(--SecondaryColor), 0 0 20px var(--SecondaryColor),
     0 0 30px var(--SecondaryColor);
@@ -44,13 +76,35 @@
   width: 20rem;
   height: 20rem;
   top: -7rem;
-    left: -8rem;
+  left: -8rem;
   border-left: 4px var(--PrimaryColorRed) solid;
   border-radius: 50%;
-  animation: circle-motion 4s linear infinite ;
+  animation: circle-motion 4s linear infinite;
   animation-delay: 1s;
 }
 
+@media screen and (max-width: 600px) {
+  .header-Main--floating-ball-outer {
+    display: none;
+  }
+  .header-Main--floating-ball-outer::before {
+    display: none;
+  }
+  .header-Main--floating-ball-outer::after {
+    display: none;
+  }
+}
+@media screen and (min-width: 601px) and (max-width: 900px) {
+  .header-Main--floating-ball-outer {
+    display: none;
+  }
+  .header-Main--floating-ball-outer::before {
+    display: none;
+  }
+  .header-Main--floating-ball-outer::after {
+    display: none;
+  }
+}
 @keyframes circle-motion {
   0% {
     transform: rotate(0deg);
@@ -97,6 +151,87 @@
   height: 100%;
   background-color: var(--PrimaryColor);
   animation: FadingIn 10s linear infinite;
+}
+
+@media screen and (max-width: 600px) {
+  .header-Main--heading-container h1 {
+    text-transform: uppercase;
+    font-size: 3rem;
+    font-weight: 600;
+    padding-bottom: 5rem;
+    letter-spacing: 1rem;
+    text-align: center;
+    justify-content: center;
+    animation: slideinleft 2s ease-in-out;
+    text-shadow: 0 1px 0 var(--SecondaryColor), 0 2px 0 var(--SecondaryColor),
+      0 3px 0 var(--SecondaryColor), 0 4px 0 var(--SecondaryColor),
+      0 20px 5px var(--SecondaryColor);
+  }
+  .header-Main--heading-container--p {
+    text-transform: uppercase;
+    font-size: 1rem;
+    font-weight: 400;
+    padding: 2rem;
+    letter-spacing: 0.5rem;
+    position: relative;
+    text-align: center;
+    justify-content: center;
+    overflow: hidden;
+    text-shadow: 0 1px 0 var(--SecondaryColor), 0 2px 0 var(--SecondaryColor),
+      0 3px 0 var(--SecondaryColor), 0 4px 0 var(--SecondaryColor),
+      0 20px 5px var(--SecondaryColor);
+  }
+
+  .header-Main--heading-container--p::before {
+    content: "";
+    position: absolute;
+    width: 120%;
+    height: 100%;
+    background-color: var(--PrimaryColor);
+    animation: FadingIn 10s linear infinite;
+  }
+}
+
+@media screen and (min-width: 601px) and (max-width: 900px) {
+  .header-Main--heading-container {
+    grid-area: main;
+  }
+  .header-Main--heading-container h1 {
+    text-transform: uppercase;
+    font-size: 5rem;
+    font-weight: 600;
+    padding-bottom: 5rem;
+    letter-spacing: 1rem;
+    text-align: center;
+    justify-content: center;
+    animation: slideinleft 2s ease-in-out;
+    text-shadow: 0 1px 0 var(--SecondaryColor), 0 2px 0 var(--SecondaryColor),
+      0 3px 0 var(--SecondaryColor), 0 4px 0 var(--SecondaryColor),
+      0 20px 5px var(--SecondaryColor);
+  }
+  .header-Main--heading-container--p {
+    text-transform: uppercase;
+    font-size: 2rem;
+    font-weight: 400;
+    padding: 2rem;
+    letter-spacing: 0.5rem;
+    position: relative;
+    text-align: center;
+    justify-content: center;
+    overflow: hidden;
+    text-shadow: 0 1px 0 var(--SecondaryColor), 0 2px 0 var(--SecondaryColor),
+      0 3px 0 var(--SecondaryColor), 0 4px 0 var(--SecondaryColor),
+      0 20px 5px var(--SecondaryColor);
+  }
+
+  .header-Main--heading-container--p::before {
+    content: "";
+    position: absolute;
+    width: 120%;
+    height: 100%;
+    background-color: var(--PrimaryColor);
+    animation: FadingIn 10s linear infinite;
+  }
 }
 
 @keyframes slideinleft {
@@ -160,10 +295,10 @@
 }
 
 .header-Main--profile-picture-caption:hover,
-header-Main--profile-div {
+.header-Main--profile-div {
   opacity: 1;
   transition: all 0.5s ease-in-out;
-  color:#fff;
+  color: #fff;
   backdrop-filter: blur(1px);
 }
 .header-Main--profile-parapagh {
@@ -173,4 +308,102 @@ header-Main--profile-div {
   letter-spacing: 0.2rem;
   font-weight: 500;
   font-size: 0.9rem;
+}
+
+
+
+
+@media screen and (max-width: 600px) {
+  .header-Main--profile-picture-container {
+    margin-top: 7rem;
+  display: fle;
+                    
+  justify-content: center;
+  align-items: center;
+}
+
+.header-Main--profile-picture {
+
+  width: 10rem;
+  height: 10rem;
+  border-radius: 50%;
+  box-shadow: 0 0 10px var(--SecondaryColor), 0 0 20px var(--SecondaryColor),
+    0 0 30px var(--SecondaryColor);
+}
+.header-Main--profile-picture-caption {
+  text-transform: uppercase;
+  font-size: 1.2rem;
+  font-weight: 600;
+  padding: 1rem;
+
+  text-align: center;
+  justify-content: center;
+  opacity: 0;
+  transform: translateY(-7rem);
+}
+
+.header-Main--profile-picture-caption:hover,
+.header-Main--profile-div {
+  opacity: 1;
+  transition: all 0.5s ease-in-out;
+  color: #fff;
+  backdrop-filter: blur(1px);
+}
+.header-Main--profile-parapagh {
+  /* grid-area: pgh; */
+  text-transform: uppercase;
+  letter-spacing: 0.2rem;
+  font-weight: 500;
+  font-size: 0.9rem;
+}
+
+ 
+}
+
+@media screen and (min-width: 601px) and (max-width: 900px) {
+  .header-Main--profile-picture-container {
+    padding-left: 5rem;
+    display: grid;
+   grid-template-columns: repeat(2,1fr);
+    text-align: center;
+    justify-content: center;
+    gap: 3rem;
+    z-index: -10;
+  }
+
+.header-Main--profile-picture {  
+  width: 20rem;
+  height: 20rem;
+  border-radius: 50%;
+  box-shadow: 0 0 10px var(--SecondaryColor), 0 0 20px var(--SecondaryColor),
+    0 0 30px var(--SecondaryColor);
+}
+.header-Main--profile-picture-caption {
+  text-transform: uppercase;
+  font-size: 1.2rem;
+  font-weight: 600;
+  padding: 1rem;
+
+  text-align: center;
+  justify-content: center;
+  opacity: 0;
+  transform: translateY(-7rem);
+}
+
+.header-Main--profile-picture-caption:hover,
+.header-Main--profile-div {
+  opacity: 1;
+  transition: all 0.5s ease-in-out;
+  color: #fff;
+  backdrop-filter: blur(1px);
+}
+.header-Main--profile-parapagh {
+  width: 30rem;
+  height: 100%;
+  text-transform: uppercase;
+  letter-spacing: 0.2rem;
+  font-weight: 500;
+  font-size: 1.2rem;
+}
+  
 }
