--- a/src/pages/projects/ProjectComponent.module.css
+++ b/src/pages/projects/ProjectComponent.module.css
@@ -116,3 +116,122 @@
     color: var(--SecondaryColor);
     transform: translateY(.6rem);
 }
+
+
+@media screen and (max-width:600px) {
+ 
+.projectcomponent{
+    width: 100%;
+    height: 30vh;
+    
+    font-size: .8rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr ;
+    grid-template-rows: repeat(5,1fr) ;
+    grid-template-areas: "head head"
+                "stdate edsate"
+                "github github"
+                "website website"
+                "update update"
+                "describ describ";   
+                
+    border-bottom: 10px  var(--TextairyBlack) solid;
+   
+   
+    border-left:3px  var(--TextairyBlack) solid;
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
+    padding: 2rem;
+    
+}
+.projectcomponent span{
+    padding: 1.2rem;
+    text-transform: uppercase;
+    font-weight: 800;
+}
+
+.projectheader{
+    font-size: 1rem;
+    padding: 1rem;
+    grid-area: head;
+    text-transform: uppercase;
+
+   
+}
+
+.modaldesign{
+    width: 80%;
+    height: 30%;
+    background-color: var(--TextairyBlack);
+    color: #ffff;
+    font-size: .5rem;
+    border-radius: 25px;
+    padding: 2rem;
+    align-self: center;
+    justify-self: center;
+    justify-content: space-between;
+    display: flex;
+    flex-direction: column;
+    transform: translateY(30%);
+}
+  
+}
+@media screen and (min-width:600px) and (max-width:900px){
+ .projectcomponent{
+    width: 100%;
+    height: 50vh;
+    
+    font-size: 1rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr ;
+    grid-template-rows: repeat(5,1fr) ;
+    grid-template-areas: "head head"
+                "stdate edsate"
+                "github github"
+                "website website"
+                "update update"
+                "describ describ";   
+                
+    border-bottom: 10px  var(--TextairyBlack) solid;
+   
+   
+    border-left:3px  var(--TextairyBlack) solid;
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
+    padding: 2rem;
+    
+}
+.projectcomponent span{
+    padding: 1.2rem;
+    text-transform: uppercase;
+    font-weight: 800;
+}
+
+.projectheader{
+    font-size: 1.5rem;
+    padding: 1rem;
+    grid-area: head;
+    text-transform: uppercase;
+
+   
+}
+
+.modaldesign{
+    width: 80%;
+    height: 30%;
+    background-color: var(--TextairyBlack);
+    color: #ffff;
+    font-size: .5rem;
+    border-radius: 25px;
+    padding: 2rem;
+    align-self: center;
+    justify-self: center;
+    justify-content: space-between;
+    display: flex;
+    flex-direction: column;
+    transform: translateY(30%);
+}
+  
+
+  
+}
