--- a/src/pages/MainNavigation/MainNavigation.module.css
+++ b/src/pages/MainNavigation/MainNavigation.module.css
@@ -32,13 +32,14 @@
     grid-template-rows: [head-start]1fr [main] 1fr[head-end];
     align-content: space-between;
     width: 100%;
-    height: 100%;
+    height: 20vh;
     text-decoration: none;
     list-style: none;
     overflow: hidden;
-    padding: var(--bodyPadding);
     background-color: var(--PrimaryColor);
     position: relative;
+    padding-bottom: 5rem;
+    padding-top: 3rem;
   }
 
   .Logo {
