--- a/src/pages/Skill.module.css
+++ b/src/pages/Skill.module.css
@@ -18,7 +18,7 @@
 
 .skillimg{
     width: 100%;
-    height: 70%;
+    height: 70rem;
     background-size: cover;
     
 }
@@ -37,7 +37,7 @@
 }
 .skillimg{
     width: 100%;
-    height: 70%;
+    height: 50rem;
     background-size: cover;
     
 }
@@ -57,7 +57,7 @@
 }
   .skillimg{
     width: 100%;
-    height: 40%;
+    height: 30rem;
     background-size: cover;
     
 }
