--- a/src/pages/projects/ProjectComponent.module.css
+++ b/src/pages/projects/ProjectComponent.module.css
@@ -181,16 +181,9 @@
     width: 100%;
     height: 50vh;
     
-    font-size: 1rem;
-    display: grid;
-    grid-template-columns: 1fr 1fr ;
-    grid-template-rows: repeat(5,1fr) ;
-    grid-template-areas: "head head"
-                "stdate edsate"
-                "github github"
-                "website website"
-                "update update"
-                "describ describ";   
+    font-size: 2rem;
+    display: flex;
+    flex-direction: column;
                 
     border-bottom: 10px  var(--TextairyBlack) solid;
    
@@ -199,7 +192,7 @@
     border-bottom-left-radius: 25px;
     border-bottom-right-radius: 25px;
     padding: 2rem;
-    
+    line-height: 5rem;
 }
 .projectcomponent span{
     padding: 1.2rem;
