--- a/src/pages/Project.module.css
+++ b/src/pages/Project.module.css
@@ -22,14 +22,26 @@
 }
 
 @media screen and (min-width: 601px) and(max-width:900px) {
+   .projectHeading {
+    color: var(--SecondaryColor);
+    font-family: "Source Serif 4", serif;
+    font-weight: 900;
+    font-size: 3rem;
+    align-self: center;
+    justify-self: center;
+    padding: 7rem 2rem;
+    text-transform: uppercase;
+    letter-spacing: 0.7rem;
+  }
   .project {
     height: 80vh;
     color: var(--SecondaryColor);
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
     padding: 5rem;
     gap: 2rem;
   }
+  
 }
 
 @media screen and (max-width: 600px) {
