fix: Add Netlify configuration and update styles fix the typo error in the names of the Testimony component and its CSS module fix the typo error in the names of the Project component and its CSS module fix the picture in the testimoney component increase size of fontize in the modal increase in the size in sharedPages fix the justify accross app

--- a/src/pages/blogs/BlogComponent.module.css
+++ b/src/pages/blogs/BlogComponent.module.css
@@ -26,6 +26,8 @@
 .blogcomponentcontent{
     border-bottom: 3px var(--SecondaryColor) groove;
     padding: 2rem;
+    text-align: justify;
+    hyphens: auto;
 }
 .blogcomponentcontent span{
     font-size: 2rem;
