--- a/src/pages/projects/ProjectComponent.module.css
+++ b/src/pages/projects/ProjectComponent.module.css
@@ -22,6 +22,8 @@
     border-bottom-left-radius: 25px;
     border-bottom-right-radius: 25px;
     padding: 2rem;
+    text-align: justify;
+    hyphens: auto;
     
 }
 .projectcomponent span{
@@ -66,7 +68,9 @@
 .projectdescrib{
     grid-area: describ;
   
-     padding: 0.5rem;
+     padding: 0.8rem;
+     text-align: justify;
+    hyphens: auto;
     
 }
 
@@ -124,7 +128,7 @@
     width: 100%;
     height: 30vh;
     
-    font-size: .8rem;
+    font-size: 1rem;
     display: grid;
     grid-template-columns: 1fr 1fr ;
     grid-template-rows: repeat(5,1fr) ;
@@ -161,10 +165,10 @@
 
 .modaldesign{
     width: 80%;
-    height: 30%;
+    height: 50%;
     background-color: var(--TextairyBlack);
     color: #ffff;
-    font-size: .5rem;
+    font-size: 1.5rem;
     border-radius: 25px;
     padding: 2rem;
     align-self: center;
